

Name: Harmoni ChangeLog


v. 0.7.7 (2006-08-28)
----------------------------------------------------
		
	* Bug Fix: UnitTests: Removed depricated pass-by-reference call. (Adam Franco)
		
	* Bug Fix: Chronology: Fixed error, ClockPrecision must be non-zero as otherwise dates span two days rather than a clock-tick less than 24 hours. (Adam Franco)
		
	* New feature: GUI: The table layout can now handle rendering direction of elements other than Left-Right/Top-Bottom. (Adam Franco)
		
	* New feature: GUI: TThe XLayout and YLayout can now handle rendering direction of elements other than Left-Right and Top-Bottom. (Adam Franco)
	
v. 0.7.6 (2006-08-15)
----------------------------------------------------
		
	* Bug Fix: Repository: RepositoryManager now returns false instead of an error if the asset with the specified Id does not exist. (Adam Franco)
	
v. 0.7.5 (2006-08-11)
----------------------------------------------------
		
	* Bug Fix: Fixed incomplete method in RegexValidator rule. (Adam Franco)
		
	* Bug Fix: Now can force cookie usage to prevent accidental or intentional session hijacking by the passing of session ids in the url. (Adam Franco)
		
	* Bug Fix: Authentication/Authorization: Now can dirty the authentication cache to allow HTTP authentication (interrupting the execution cycle) to update the currently authenticated agent. (Adam Franco)
		
	* Bug Fix: Authentication: Now passes an auth type key to the token collectors to allow them to differentiate between prompting again for an auth type and just trying to get the tokens for another auth type. (Adam Franco)
		
	* Change: Authentication: Now can pass custom relm and callback function to execute on cancel for the HTTP authentication. (Adam Franco)
		
	* Bug Fix: ErrorHandler: Removed debugging line. (Adam Franco)
	
v. 0.7.4 (2006-08-04)
----------------------------------------------------
		