@@ -3,12 +3,16 @@
  @package harmoni.docs
  @copyright Copyright &copy; 2005, Middlebury College
  @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
- @version $Id: changelog.xml,v 1.130.2.20 2006/08/28 17:01:42 adamfranco Exp $
+ @version $Id: changelog.xml,v 1.130.2.21 2006/08/28 17:03:41 adamfranco Exp $
  -->
 <!DOCTYPE changelog SYSTEM "../dtds/changelog.dtd">
 
 <changelog name="Harmoni ChangeLog">
 	<version number="0.7.7" date="2006-08-28">
+		<fix author='adam'>
+			Chronology: Now parses dates of the form 'August 10th, 2006' and 
+			doesn't choke on the 'th'.
+		</fix>
 		<fix author='adam'>
 			UnitTests: Removed depricated pass-by-reference call.
 		</fix>
